Align Integer/Number fidelity for sum, mod, round and trunc.
Keep aggregate sum on Integer as Long, force analytic window sum to Number, and stop Spark SQL round from overriding VTL Integer return types. TCK Spark3 moves 123→127 passes.

Co-authored-by: Cursor <cursoragent@cursor.com>